crates/apollo-compiler/test_data/diagnostics/0078_merge_conflict_nested_fragments.txt
Error: cannot select different fields into the same alias `y`
    ╭─[ 0078_merge_conflict_nested_fragments.graphql:25:3 ]
    │
 25 │   y: c
    │   ──┬─  
    │     ╰─── `y` is selected from `T.c` here
    │ 
 28 │   y: d
    │   ──┬─  
    │     ╰─── `y` is selected from `T.d` here
    │ 
    │ Help: Both fields may be present on the schema type, so it's not clear which one should be used to fill the response
────╯
Error: cannot select different fields into the same alias `x`
    ╭─[ 0078_merge_conflict_nested_fragments.graphql:32:3 ]
    │
 21 │   x: a
    │   ──┬─  
    │     ╰─── `x` is selected from `T.a` here
    │ 
 32 │   x: b
    │   ──┬─  
    │     ╰─── `x` is selected from `T.b` here
    │ 
    │ Help: Both fields may be present on the schema type, so it's not clear which one should be used to fill the response
────╯

